--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
 streamlit==1.45.0
 sqlalchemy
 faker
+pandas==2.0.3
+numpy==1.24.3
+scikit-learn==1.3.2
+joblib==1.3.2
+torch==2.0.1
+tqdm==4.66.1
+matplotlib==3.7.2
+seaborn==0.12.2
+tensorboard==2.14.0
